@@ -1,3 +1,16 @@
+- **Signe des montants à payer, à recevoir et icônes:**
+
+  - Le montant à recevoir est positif et l'icône est au rouge si le tiers concerné doit de l'argent à la société
+
+  - Le montant à recevoir est négatif et l'icône est au vert si la société doit de l'argent au tiers concerné
+
+  - Le montants à payer est positif et l'icône est au vert si la société doit de l'argent au tiers concerné
+
+  - Le montant à payer est négatif et l'icône est au rouge si le tiers concerné doit de l'argent à la société
+
+  .. image :: images/negative_payable_icon.png
+
+
 - **Définition des frais :** Tryton ne permet pas de base de définir des frais,
   qui sont un élément indispensable de la gestion des contrats d'assurance.
 
