@@ -13,5 +13,10 @@
             <field name="inherit" ref="party_cog.party_view_synthesis_form"/>
             <field name="name">party_synthesis_form</field>
         </record>
+        <record model="ir.ui.view" id="party_view_list">
+            <field name="model">party.party</field>
+            <field name="inherit" ref="party.party_view_tree"/>
+            <field name="name">party_list</field>
+        </record>
     </data>
 </tryton>
